--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-ACCESS_KEY_ID = '阿里云短信测试'
-ACCESS_KEY_SECRET = 'SMS_154950909'
+ACCESS_KEY_ID = 'LTAI5tFLANvCB1z7MryHiPAo'
+ACCESS_KEY_SECRET = 'iuSLkpN2NAWGKKOSjcefXPUcHaGoj1'
