--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
     "dev:local": "nodemon ./server.js"
   },
   "dependencies": {
+    "@alicloud/darabonba-env": "^1.0.0",
+    "@alicloud/darabonba-string": "^1.0.0",
     "@alicloud/dysmsapi20170525": "^2.0.24",
+    "@alicloud/openapi-client": "^0.3.0",
+    "@alicloud/tea-console": "^1.0.0",
+    "@alicloud/tea-typescript": "latest",
+    "@alicloud/tea-util": "^1.4.0",
+    "@darabonba/time": "^1.0.0",
     "body-parse": "^0.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-static": "^1.2.6",
     "fs": "^0.0.1-security",
@@ -15,20 +23,13 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
-    "superagent": "^8.0.9",
-    "@alicloud/tea-typescript": "latest",
-    "@alicloud/openapi-client": "^0.3.0",
-    "@alicloud/tea-console": "^1.0.0",
-    "@alicloud/darabonba-env": "^1.0.0",
-    "@alicloud/tea-util": "^1.4.0",
-    "@darabonba/time": "^1.0.0",
-    "@alicloud/darabonba-string": "^1.0.0"
+    "superagent": "^8.0.9"
   },
   "devDependencies": {
-    "typescript": "^5.1.6",
     "@types/node": "^12.12.26",
     "nyc": "^15.0.0",
     "source-map-support": "^0.5.16",
-    "ts-node": "^8.6.2"
+    "ts-node": "^8.6.2",
+    "typescript": "^5.1.6"
   }
 }
