--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "dev": "node ./server.js",
     "dev:local": "nodemon ./server.js",
-    "pm2": "pm2 start ./server.js -n wedoctorserver"
+    "pm2": "pm2 start npm --name 'wedoctorserver' -- dev"
+
   },
   "dependencies": {
     "@alicloud/darabonba-env": "^1.0.0",
