--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "scripts": {
     "dev": "node ./server.js",
     "dev:local": "nodemon ./server.js",
-    "pm2": "pm2 start ./server.js --name 'wedoctorserver'"
-
+    "pm2": "pm2 start ./server.js --name 'dynamicWeb'",
+    "pm": "pm2 start npm --name 'bizhi' -- start"
   },
   "dependencies": {
     "@alicloud/darabonba-env": "^1.0.0",
