--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "dev": "node ./server.js",
     "dev:local": "nodemon ./server.js",
     "pm2": "pm2 start ./server.js --name 'wedoctorserver'"
-
   },
   "dependencies": {
     "@alicloud/darabonba-env": "^1.0.0",
@@ -25,7 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
-    "superagent": "^8.0.9"
+    "superagent": "^8.0.9",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^12.12.26",
