--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "dev": "node ./server.js",
     "dev:local": "nodemon ./server.js",
-    "pm2": "pm2 start ./server.js --name 'wedoctorserver'"
+    "pm2": "pm2 start npm --name 'insta' -- dev"
   },
   "dependencies": {
     "@alicloud/darabonba-env": "^1.0.0",
